--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="login-box">
-        <h2>login</h2>
+        <h2>Login</h2>
         <form action="">
             <div class="user-box">
                 <input type="text"name="" required>
